deployments/api-www/minikube-istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-www-gateway-api
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-www
spec:
  hosts:
    - "*"
  gateways:
    - api-www-gateway-api
  http:
    - route:
        - destination:
            host: api-www
            port:
              number: 7041
